Cambio de base de datos

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,1 @@
-spring.data.mongodb.uri=mongodb+srv://heroe:heroe@test.pa7hd.mongodb.net/clinicaReactiva?retryWrites=true&w=majority
+mongodb+srv://admin:admin@proyectos.bsqdx.mongodb.net/test?retryWrites=true&w=majority
