--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,1 @@
-mongodb+srv://admin:admin@proyectos.bsqdx.mongodb.net/test?retryWrites=true&w=majority
+spring.data.mongodb.uri=mongodb+srv://admin:admin@proyectos.bsqdx.mongodb.net/test?retryWrites=true&w=majority
