--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,1 @@
-spring.data.mongodb.uri=mongodb+srv://admin:admin@proyectos.bsqdx.mongodb.net/test?retryWrites=true&w=majority
+spring.data.mongodb.uri=mongodb+srv://darius:Passw0rd@project.gtzna.mongodb.net/appCitas?retryWrites=true&w=majority
